fixed bug on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #101010;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
@@ -24,6 +17,7 @@ input {
   background-color: transparent;
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
   outline: none;
 }
